@@ -1,5 +1,11 @@
 2007-10-14 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gimv_comment.c, src/gimv_comment_view.c, src/gimv_dlist.c,
+	  src/gimv_dupl_finder.c, src/gimv_dupl_win.c, src/gimv_image_loader.c:
+	gtk_signal -> g_signal
+
+2007-10-14 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/auto_completion.c, src/exif_view.c, src/fr-archive.c,
 	  src/fr-command.c, src/fr-process.c, src/fileload.c:
 	gtk_signal -> g_signal
